0029827: Modeling Data - TopoDS_Shape::Nullify() does not reset location

TopoDS_Shape::Nullify() nullify not only myTShape but myLocation and myOrient.
Nullified shapes are equal and same now.
Added test.